tests/it/wire/snapshots/it__wire__gemini__tool_choice_required.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "body": {
    "contents": [
      {
        "parts": [
          {
            "text": "What is the weather in Paris?"
          }
        ],
        "role": "user"
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128
    },
    "safetySettings": [
      {
        "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
        "threshold": "BLOCK_ONLY_HIGH"
      }
    ],
    "systemInstruction": {
      "parts": [
        {
          "text": "Use the tools when they help."
        }
      ]
    },
    "toolConfig": {
      "functionCallingConfig": {
        "mode": "ANY"
      }
    },
    "tools": [
      {
        "functionDeclarations": [
          {
            "description": "Reads the current weather for a city",
            "name": "get_weather",
            "parametersJsonSchema": {
              "properties": {
                "city": {
                  "type": "string"
                }
              },
              "required": [
                "city"
              ],
              "type": "object"
            }
          },
          {
            "description": "Reads the current time in a time zone",
            "name": "get_time",
            "parametersJsonSchema": {
              "properties": {
                "zone": {
                  "type": "string"
                }
              },
              "required": [
                "zone"
              ],
              "type": "object"
            }
          }
        ]
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "736"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "method": "POST",
  "path": "/v1beta/models/gemini-2.5-pro-002:generateContent"
}
