tests/it/wire/snapshots/it__wire__gemini__tools_request-2.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "content": [
    {
      "text": "Checking the weather.",
      "type": "text"
    },
    {
      "arguments": {
        "city": "Paris"
      },
      "id": "get_weather-0-resp-gemini-1",
      "kind": "function",
      "name": "get_weather",
      "provider_metadata": {
        "gemini": {
          "thoughtSignature": "sig-call"
        }
      },
      "type": "tool_call"
    }
  ],
  "finish_reason": "tool_call",
  "id": "resp-gemini-1",
  "model": {
    "model": "gemini-3.1-pro",
    "provider": "gemini"
  },
  "raw": {
    "candidates": [
      {
        "content": {
          "parts": [
            {
              "text": "Checking the weather."
            },
            {
              "functionCall": {
                "args": {
                  "city": "Paris"
                },
                "name": "get_weather"
              },
              "thoughtSignature": "sig-call"
            }
          ],
          "role": "model"
        },
        "finishReason": "STOP",
        "index": 0
      }
    ],
    "modelVersion": "gemini-3.1-pro-002",
    "responseId": "resp-gemini-1",
    "usageMetadata": {
      "candidatesTokenCount": 12,
      "promptTokenCount": 42,
      "thoughtsTokenCount": 7,
      "totalTokenCount": 61
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 42,
    "output": 12,
    "reasoning": 7
  }
}
