tests/it/wire/snapshots/it__wire__gemini__url_attachments_request.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1beta/models/gemini-2.5-pro-002:generateContent",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "330"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "body": {
    "contents": [
      {
        "role": "user",
        "parts": [
          {
            "text": "Describe both attachments."
          },
          {
            "fileData": {
              "fileUri": "https://example.com/cat.png"
            }
          },
          {
            "fileData": {
              "fileUri": "https://example.com/report.pdf"
            }
          }
        ]
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128
    },
    "safetySettings": [
      {
        "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
        "threshold": "BLOCK_ONLY_HIGH"
      }
    ]
  }
}
