tests/it/wire/snapshots/it__wire__gemini__usage_buckets_are_disjoint.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "cache_read": 180,
  "cache_write": 0,
  "input": 420,
  "output": 200,
  "reasoning": 300
}
